Version 6.0 alpha: (CVS)
	* added: support for %weather KXXX via Geo::METAR (Pete Pearson)
	* added: you can now add "plugins" inside simbot.pl, a feature which
	  will be split out later

Version 5.99.16: (03 Dec 2003)
	* added: config.pl splits the configuration from the main script
	* added: ChangeLog splits the ChangeLog from the main script
	* added: some error checking should die on a bad configuration
	* removed: evil hacky privmsg functions that could be abused
	* this will be the first version to appear in SF.net CVS
	
Version 5.99.15: (17 Nov 2003)
	* fixed: %find's queries sometimes broke the calculator result
	* added: %find can now use the Google calculator!
	* added: bot should see = as eyes where appropriate
	* added: bot will accept its name in the middle of a line
	* added: added todo list function (%todo)
	* added: expanded the set of ignored keywords
	* added: ignore lines that have no alphanumeric characters
	* added: strip out all formatting codes before processing text
	* added: allow ASCII international characters to be recorded
	
Version 5.99.14:
	* fixed: bot should no longer try to record blank actions
	* fixed: bot will not report dead word count without dead words
	* added: expanded the set of ignored keywords
	* added: bot will track punctuation by first word, not last word

Version 5.99.13:
	* fixed: a problem with infinite loops in sentence generation
	* fixed: redesigned the sentence generator to be much faster
	* fixed: bot will no longer record lines that reduce as empty
	* fixed: improved smiley detection to reduce errors

Version 5.99.12:
	* fixed: added disconnect check & 15 second wait between attempts
	* fixed: eliminated bot babble in messages by using notice reply
	* added: bot will now attempt to autorecover the default nickname

Version 5.99.11:
	* fixed: cleaned up some connection related issues where possible
	* added: a new quip for %list

Version 5.99.10:
	* added: new filter items to the word filter using regex