@@ -1,8 +1,15 @@
 Version 6.0 alpha: (CVS)
-	* added: support for %weather KXXX via Geo::METAR (Pete Pearson)
+	* added: support for %weather via Geo::METAR (Pete Pearson)
 	* added: you can now add "plugins" inside simbot.pl, a feature which
 	  will be split out later
-
+	* added: extended number of verbose levels to 4 for crazy output
+	* fixed: cleaned out most of the warnings generated with perl -w
+	* fixed: failure to save the rules file is no longer a success
+	* fixed: if the rules can't load, do not later try to save them
+	* fixed: smileys with = at the end of a line should not be recorded
+	* removed: some sleep calls that aren't used for anything
+	* removed: %version command to eliminate duplicate ChangeLog
+	    
 Version 5.99.16: (03 Dec 2003)
 	* added: config.pl splits the configuration from the main script
 	* added: ChangeLog splits the ChangeLog from the main script
